log
Fri 29 Mar 2024 06:55:38 PM UTC: 
 tests:  0|6
total_score: 0/70
c1563aa
Fri 29 Mar 2024 07:00:01 PM UTC: 
 list.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
9958378
Fri 29 Mar 2024 07:02:08 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
c8c2986
Fri 29 Mar 2024 07:11:48 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
test.c: In function ‘pushCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:112:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  112 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:103:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  103 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
58cdb53
Fri 29 Mar 2024 07:13:19 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
6a3eaeb
Fri 29 Mar 2024 07:18:08 PM UTC: 
 list.c | 30 +++++++++++++++++-------------
 1 file changed, 17 insertions(+), 13 deletions(-)
 tests:  10|2
total_score: 45/70
96b4cb5
